# amethyst_iced

./: Cargo.toml  LICENSE  README.md
assets/: display_config.ron
examples/: checkbox.rs  counter.rs  custom_font.rs  hello.rs  image.rs  pane_grid.rs  progress_bar.rs  radio.rs  slider.rs
shaders/compiled/: image.frag.spv  image.vert.spv  text.frag.spv  text.vert.spv  triangle.frag.spv  triangle.vert.spv
shaders/src/: compile_shaders.sh  image.frag  image.vert  text.frag  text.vert  triangle.frag  triangle.vert
src/: backend.rs  bundle.rs  lib.rs  pass.rs  plugin.rs  primitive.rs  sandbox.rs  uniform.rs  vertex.rs
src/custom_widget/: image.rs  mod.rs
src/pipelines/: image.rs  mod.rs  text.rs  triangle.rs
src/resources/: font_cache.rs  mod.rs
src/style/: border.rs  colors.rs  mod.rs
src/systems/: draw.rs  draw_glyphs.rs  interop.rs  load_fonts.rs  mod.rs
src/vertex/: image.rs  mod.rs  text.rs  triangle.rs
src/widget/: button.rs  checkbox.rs  column.rs  container.rs  mod.rs  pane.rs  progress_bar.rs  radio.rs  row.rs  slider.rs  space.rs  text.rs
